--- a/nimi-mute/ona.html
+++ b/nimi-mute/ona.html
@@ -22,7 +22,7 @@
     </div></nav>
         <div class="main">
 
-        <h1>ona</h1><hr>
+        <h1>ona</h1>
         <p style="padding: 10px">
         ona li powe.
         <br>mi pali e ona.
