--- a/nimi-mute/sona-pini.html
+++ b/nimi-mute/sona-pini.html
@@ -22,7 +22,7 @@
         </div></nav>
         <div class="main">
 
-        <h1>sona pini</h1><hr>
+        <h1>sona pini</h1>
         <p style="padding: 10px">
         tenpo kama la mi sona ala sona e ni?
         <br>lon weka mi?
