--- a/nimi-mute/suno.html
+++ b/nimi-mute/suno.html
@@ -22,7 +22,7 @@
         </div></nav>
         <div class="main">
 
-        <h1>suno</h1><hr>
+        <h1>suno</h1>
         <p style="padding: 10px">
         tenpo mun.
         <br>mi mute li tawa.
