--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -22,7 +22,7 @@
         </div></nav>
         <div class="main">
 
-        <h1>tomo ni</h1><hr>
+        <h1>tomo ni</h1>
         <p style="padding: 10px">
         tomo ni li suli a
         <br>sinpin ona li laso teSlo walo
