--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -22,7 +22,7 @@
         </div></nav>
         <div class="main">
 
-        <h1>tomo pi esun lipu</h1><hr>
+        <h1>tomo pi esun lipu</h1>
         <p style="padding: 10px">
         toki a.
         <br>mi lon tomo pi esun lipu.
