--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -22,7 +22,7 @@
     </div></nav>
         <div class="main">
 
-        <h1>len pi laso telo</h1><hr>
+        <h1>len pi laso telo</h1>
         <p style="padding: 10px">
         toki a.
         <br>mi lon tomo tawa telo suli tan ni: mi tawa tomo pi jan majuna mi.
