--- a/blender.html
+++ b/blender.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>blender</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
 
         .pyramid{
@@ -18,32 +18,38 @@
 
     </style></head>
 
-        <body><header><nav>
-            <a href="/mute-ante">home</a> <b>:</b>
-            <a href="/mute-ante/interests">interests</a> · 
-            <a href="/mute-ante/musicians">musicians</a> · 
-            <a href="/mute-ante/websites">websites</a> · 
-            <a href="/mute-ante/nimi-mute">nimi mute</a> · 
-            <a href="/mute-ante/difference">difference</a> · 
-            <a href="/mute-ante/sitelog">sitelog</a>
-        </nav></header>
-        <div class="container">
+        <body><nav><div style="margin: 20px">
+            <a href="/website">home</a><br>
+            <br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
+            <br>
+            <a href="/website/nimi-mute">nimi mute</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
+            <br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
+        </div></nav>
+        <div class="main">
         <h1>some things made in blender</h1>
         <hr>
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. (i should make colorful things more often...) These are a bunch of them.
-            <br>btw, all the images/gifs (just like all of the site) are licensed under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
+            <br>btw, all the images/gifs (just like all of the site) are licensed under <a href="/website/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
-            <li><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids (4)</a></li>
-            <li><a href="/mute-ante/blenders/buttons">buttons (7)</a></li>
-            <li><a href="/mute-ante/blenders/cmyk">cmyk (5)</a></li>
+            <li><a href="/website/blender/pyramids" class="pyramid">pyramids (4)</a></li>
+            <li><a href="/website/blender/buttons">buttons (7)</a></li>
+            <li><a href="/website/blender/cmyk">cmyk (5)</a></li>
         </ul>
-        <img src="/mute-ante/blenders/ampersand.png" alt="ampersand" width="100%">
-        <img src="/mute-ante/blenders/angle2.png" alt="angle2" width="100%">
-        <img src="/mute-ante/blenders/arrow2.png" alt="arrow2" width="100%">
-        <img src="/mute-ante/blenders/cloud.png" alt="cloud" width="100%">
-        <img src="/mute-ante/blenders/cuberootof2.png" alt="cuberootof2" width="100%">
-        <img src="/mute-ante/blenders/idk2.png" alt="idk2" width="100%">
-        <img src="/mute-ante/blenders/lines.png" alt="lines" width="100%">
-        <img src="/mute-ante/blenders/square.png" alt="square" width="100%">
+        <img src="/website/blender/ampersand.png" alt="ampersand" width="100%">
+        <img src="/website/blender/angle2.png" alt="angle2" width="100%">
+        <img src="/website/blender/arrow2.png" alt="arrow2" width="100%">
+        <img src="/website/blender/cloud.png" alt="cloud" width="100%">
+        <img src="/website/blender/cuberootof2.png" alt="cuberootof2" width="100%">
+        <img src="/website/blender/idk2.png" alt="idk2" width="100%">
+        <img src="/website/blender/lines.png" alt="lines" width="100%">
+        <img src="/website/blender/square.png" alt="square" width="100%">
     </div></body>
