--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -25,11 +25,11 @@
     <div class="main">
         <h1>cmyk</h1>
         <hr>
-        <img src="/website/blender/cmyk/cmyk.png" alt="cmyk" width="100%">
-        <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3" width="100%">
-        <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4" width="100%">
-        <img src="/website/blender/cmyk/cmyk7.png" alt="cmyk7" width="100%">
-        <img src="/website/blender/cmyk/cmyk8.png" alt="cmyk8" width="100%">
+        <img src="/website/blender/cmyk/cmyk.png" alt="cmyk" width="600px">
+        <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3" width="600px">
+        <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4" width="600px">
+        <img src="/website/blender/cmyk/cmyk7.png" alt="cmyk7" width="600px">
+        <img src="/website/blender/cmyk/cmyk8.png" alt="cmyk8" width="600px">
 
         <p> ⇤ <a href="/website/blender">go back</a></p>
     </div></body>
