--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -34,10 +34,10 @@
     <div class="main">
         <h1>pyramids</h1>
         <hr style="border-color:#ddba39">
-        <img src="/website/blender/pyramids/pyramids.png" alt="pyramids" width="100%">
-        <img src="/website/blender/pyramids/pyramids2.png" alt="pyramids2" width="100%">
-        <img src="/website/blender/pyramids/pyramids3.png" alt="pyramids3" width="100%">
-        <img src="/website/blender/pyramids/pyramids4.png" alt="pyramids4" width="100%">
+        <img src="/website/blender/pyramids/pyramids.png" alt="pyramids" width="600px">
+        <img src="/website/blender/pyramids/pyramids2.png" alt="pyramids2" width="600px">
+        <img src="/website/blender/pyramids/pyramids3.png" alt="pyramids3" width="600px">
+        <img src="/website/blender/pyramids/pyramids4.png" alt="pyramids4" width="600px">
 
         <p> ⇤ <a href="/website/blender">go back</a></p>
     </div></body>
