--- a/blender.html
+++ b/blender.html
@@ -44,12 +44,12 @@
             <li><a href="/website/blender/buttons">buttons (7)</a></li>
             <li><a href="/website/blender/cmyk">cmyk (5)</a></li>
         </ul>
-        <img src="/website/blender/ampersand.png" alt="ampersand" width="100%">
-        <img src="/website/blender/angle2.png" alt="angle2" width="100%">
-        <img src="/website/blender/arrow2.png" alt="arrow2" width="100%">
-        <img src="/website/blender/cloud.png" alt="cloud" width="100%">
-        <img src="/website/blender/cuberootof2.png" alt="cuberootof2" width="100%">
-        <img src="/website/blender/idk2.png" alt="idk2" width="100%">
-        <img src="/website/blender/lines.png" alt="lines" width="100%">
-        <img src="/website/blender/square.png" alt="square" width="100%">
+        <img src="/website/blender/ampersand.png" alt="ampersand" width="600px">
+        <img src="/website/blender/angle2.png" alt="angle2" width="600px">
+        <img src="/website/blender/arrow2.png" alt="arrow2" width="600px">
+        <img src="/website/blender/cloud.png" alt="cloud" width="600px">
+        <img src="/website/blender/cuberootof2.png" alt="cuberootof2" width="600px">
+        <img src="/website/blender/idk2.png" alt="idk2" width="600px">
+        <img src="/website/blender/lines.png" alt="lines" width="600px">
+        <img src="/website/blender/square.png" alt="square" width="600px">
     </div></body>
