--- a/blender.html
+++ b/blender.html
@@ -41,7 +41,7 @@
         <ul>
             <li><a href="/website/blender/pyramids" class="pyramid">pyramids (4)</a></li>
             <li><a href="/website/blender/buttons">buttons (7)</a></li>
-            <li><a href="/website/blender/cmyk">cmyk (5)</a></li>
+            <li><a href="/website/blender/cmyk">cmyk (5)</a></li></ul>
         <br>
         <img src="/website/blender/ampersand.png" alt="ampersand" width="500px">
         <img src="/website/blender/angle2.png" alt="angle2" width="500px">
