--- a/misc/folder.html
+++ b/misc/folder.html
@@ -33,5 +33,6 @@
     </details>
     > <a href="/website/misc/folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.<br>
     > <a href="/website/misc/folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.<br>
+    > <a href="/website/misc/folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.<br>
     <br>> <a href="/website/misc">go back</a>
     </body>
