--- a/buttons.html
+++ b/buttons.html
@@ -3,13 +3,11 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>{buttons}</title>
-        <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <title>buttons</title>
+        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-color: #b8cadf;}
         a{color: #475464;}
-        a::after{content: "}"; color: #7ba0cc}
-        a::before{content: "{"; color: #7ba0cc;}
         a.button::after, a.button::before{content: ""}
         h1::after{content: "}"; color: #7ba0cc;}
         h1::before{content: "{"; color: #7ba0cc;}
@@ -17,8 +15,22 @@
     </style>
     </head>
 
-    <body>
-
+    <body><nav><div style="margin: 20px">
+        <a href="/website">home</a><br>
+        <br>
+        <a href="/website/about">about</a><br>
+        <a href="/website/musicians">musicians</a><br>
+        <a href="/website/websites">websites</a><br>
+        <br>
+        <a href="/website/nimi-mute">nimi mute</a><br>
+        <a href="/website/blender">blender</a><br>
+        <a href="/website/doodles">doodles</a><br>
+        <a href="/website/misc">misc</a><br>
+        <br>
+        <a href="/website/buttons">buttons</a><br>
+        <a href="/website/sitelog">sitelog</a><br>
+    </div></nav>
+    <div class="main">
     <h1>buttons</h1>
     <p>This part of the site houses a bunch of buttons (as many as currently possible), from people we talk to on discord and other folks' cool things we've come accross and think you should look at!</p>
     <h2>acquaintances</h2>
@@ -35,7 +47,5 @@
     <a href="https://status.cafe" class="button"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"/></a>
     <a href="https://noodledesk.net/" class="button"><img src="https://noodledesk.net/index_images/noodlebutton.gif" alt="noodle desk"/></a>
     <a href="https://www.bikobatanari.art/" class="button"><img src="https://www.bikobatanari.art/images/bikobatanari.gif" alt="bikobatanari"/></a>
-    
-    <br><br><a href="/mute-ante/i">go back</a>
-    <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
-    </body>
+    <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/website/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
+    </div></body>
