--- a/buttons.html
+++ b/buttons.html
@@ -12,6 +12,7 @@
         h1::after{content: "}"; color: #7ba0cc;}
         h1::before{content: "{"; color: #7ba0cc;}
         h2::before{content: "- "; color: #7ba0cc;}
+        nav{background-color: #7ba0cc; border-color: #475464}
     </style>
     </head>
 
