--- a/buttons.html
+++ b/buttons.html
@@ -9,7 +9,7 @@
         body{background-color: #b8cadf;}
         a{color: #475464;}
         nav{background-color: #7ba0cc; border-color: #475464}
-        h1{text-shadow: #475464 5px 5px}
+        h1{text-shadow: #7ba0cc 5px 5px}
     </style>
     </head>
 
