--- a/sitelog.html
+++ b/sitelog.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>sitelog</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .pyramid{
                 background-color: #000429; 
                 color:#ddba39}
@@ -16,32 +16,38 @@
             #statuscafe{margin-top: 20px; margin-bottom: 20px}
         </style></head>
 
-        <body><header><nav>
-            <a href="/mute-ante">home</a> <b>:</b>
-            <a href="/mute-ante/interests">interests</a> · 
-            <a href="/mute-ante/musicians">musicians</a> · 
-            <a href="/mute-ante/websites">websites</a> · 
-            <a href="/mute-ante/blender">blender</a> · 
-            <a href="/mute-ante/nimi-mute">nimi mute</a> · 
-            <a href="/mute-ante/difference">difference</a>
-        </nav></header>
-        <div class="container">
+        <body><nav><div style="margin: 20px">
+            <a href="/website">home</a><br>
+            <br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
+            <br>
+            <a href="/website/nimi-mute">nimi mute</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
+            <br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
+        </div></nav>
+        <div class="main">
         <h1>sitelog</h1>
-        <hr>
+        <br>
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
-        <hr>
+        <br>
         <h2>→ 20/9/2022 20:14</h2>
         <p>I have a <a href="https://cvni81.123guestbook.com/">guestbook</a> now! If you've got any feedback to give or any questions, you can say them there.</p>
         <h2>→ 11/9/2022 18:15</h2>
-        <p>Some "new" blender <a href="/mute-ante/blenders/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
+        <p>Some "new" blender <a href="/website/blenders/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
         <h2>→ 11/9/2022 18:15</h2>
-        <p>Just added a new section called <a href="/mute-ante/i">{i}</a>. Whenever i feel like making something that doesn't fit the vibe of the rest of the website, i'll put it there, whatever it may be. Also, it has it's own changelog, so anything that changes there will be there, not here. Again, whole different vibe.</p>
+        <p>Just added a new section called <a href="/website/i">{i}</a>. Whenever i feel like making something that doesn't fit the vibe of the rest of the website, i'll put it there, whatever it may be. Also, it has it's own changelog, so anything that changes there will be there, not here. Again, whole different vibe.</p>
         <h2>→ 10/9/2022 18:55</h2>
-        <p>I made a couple <a href="/mute-ante/blenders/buttons">buttons</a>. <img src="/mute-ante/blenders/buttons/walking.gif" alt="walking"></p>
+        <p>I made a couple <a href="/website/blenders/buttons">buttons</a>. <img src="/website/blenders/buttons/walking.gif" alt="walking"></p>
         <h2>→ 8/9/2022 19:36</h2>
         <p>I moved the navigation thingy to the top of the page so it doesn't mess up much with the centering!</p>
         <h2>→ 7/9/2022 09:33</h2>
-        <p>I changed the font in the <a href="/mute-ante/nimi-mute">nimi mute</a> section to Atkinson Hyperlegible, because the previous font's legibility sucked. I can even read it without glasses. <i>The power of design.</i></p>
+        <p>I changed the font in the <a href="/website/nimi-mute">nimi mute</a> section to Atkinson Hyperlegible, because the previous font's legibility sucked. I can even read it without glasses. <i>The power of design.</i></p>
         <h2>→ 3/9/2022 17:13</h2>
         <p>I now have a <a href="https://status.cafe/users/cvni81" class="cafe">status.cafe</a> thing after it decided not to give me the confirmation email darnit. I tried to put it at the start but it didn't seem to work and here seemed more appropriate.</p>
         <h2>→ 1/9/2022 19:45</h2>
@@ -51,15 +57,15 @@
         <h2>→ 31/8/2022 22:06</h2>
         <p>Alright, i'm done remaking the site! Not fully, there's still some things i want to do, but it's already better, i think.</p>
         <h2>→ 31/8/2022 20:26</h2>
-        <p>It's been a while since i've reinstalled Ubuntu, but i'm back and made another <a href="/mute-ante/nimi-mute/sona-pini">little poem</a>! Also i feel like changing the layout again...</p>
+        <p>It's been a while since i've reinstalled Ubuntu, but i'm back and made another <a href="/website/nimi-mute/sona-pini">little poem</a>! Also i feel like changing the layout again...</p>
         <h2>→ 18/8/2022 06:29</h2>
-        <p>I added a <a href="/mute-ante/nimi-mute/ona">new toki pona poem thing</a>.</p>
+        <p>I added a <a href="/website/nimi-mute/ona">new toki pona poem thing</a>.</p>
         <h2>→ 14/8/2022 13:59</h2>
         <p>Ok so, i made all links bold from the css files, but that meant having to remove almost ALL the bold tags from all the pages... That took 50 minutes?? jeez...</p>
         <h2>→ 14/8/2022 13:09</h2>
-        <p>I added <a href="/mute-ante/blenders/pyramids" class="pyramid">some more blender things</a> with purple/blue and yellow pyramids.</p>
+        <p>I added <a href="/website/blenders/pyramids" class="pyramid">some more blender things</a> with purple/blue and yellow pyramids.</p>
         <h2>→ 12/8/2022 19:12</h2>
         <p>Changed the index layout some. I think it's better.</p>
         <h2>→ 12/8/2022 17:42</h2>
-        <p>I just added the <a href="/mute-ante/blender">blender images</a> and now <a href="/mute-ante/sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
+        <p>I just added the <a href="/website/blender">blender images</a> and now <a href="/website/sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
     </div></body>
