--- a/sitelog.html
+++ b/sitelog.html
@@ -36,8 +36,18 @@
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         <h2>→ 20/9/2022 20:14</h2>
         <p>I have a <a href="https://cvni81.123guestbook.com/">guestbook</a> now! If you've got any feedback to give or any questions, you can say them there.</p>
+        <h2>→ 17/9/2022 17:10</h2>
+        <p>More drawings added to <a href="/mute-ante/i/doodles">doodles</a>, also now put into categories instead of on a list.</p>
+        <h2>→ 13/9/2022 16:49</h2>
+        <p>Added some drawings to <a href="/mute-ante/i/doodles">doodles</a> and added a new <a href="/mute-ante/i/misc">miscellaneous</a> page for things that have no other place that i can put them.</p>
+        <h2>→ 12/9/2022 16:56</h2>
+        <p>I've added <a href="/mute-ante/i/doodles">another new page</a> for me to put drawings, which i make a bunch of. However, it doesn't have much there currently. Hopefully it will in the future.</p>
+        <h2>→ 12/9/2022 09:20</h2>
+        <p>There is now <a href="/mute-ante/i/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
         <h2>→ 11/9/2022 18:15</h2>
         <p>Some "new" blender <a href="/website/blenders/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
+        <h2>→ 11/9/2022 18:46</h2>
+        <p>Created the {basement} section of the website and added, for the very first time, a johnvertisement. Now that i have a section of the website that is solely dedicated to hot having a theme (or having a theme that matches rather well with other themes), things like this are fit for it.</p>
         <h2>→ 11/9/2022 18:15</h2>
         <p>Just added a new section called <a href="/website/i">{i}</a>. Whenever i feel like making something that doesn't fit the vibe of the rest of the website, i'll put it there, whatever it may be. Also, it has it's own changelog, so anything that changes there will be there, not here. Again, whole different vibe.</p>
         <h2>→ 10/9/2022 18:55</h2>
