--- a/sitelog.html
+++ b/sitelog.html
@@ -37,13 +37,13 @@
         <h2>→ 20/9/2022 20:14</h2>
         <p>I have a <a href="https://cvni81.123guestbook.com/">guestbook</a> now! If you've got any feedback to give or any questions, you can say them there.</p>
         <h2>→ 17/9/2022 17:10</h2>
-        <p>More drawings added to <a href="/mute-ante/i/doodles">doodles</a>, also now put into categories instead of on a list.</p>
+        <p>More drawings added to <a href="/website/doodles">doodles</a>, also now put into categories instead of on a list.</p>
         <h2>→ 13/9/2022 16:49</h2>
-        <p>Added some drawings to <a href="/mute-ante/i/doodles">doodles</a> and added a new <a href="/mute-ante/i/misc">miscellaneous</a> page for things that have no other place that i can put them.</p>
+        <p>Added some drawings to <a href="/website/doodles">doodles</a> and added a new <a href="/website/misc">miscellaneous</a> page for things that have no other place that i can put them.</p>
         <h2>→ 12/9/2022 16:56</h2>
-        <p>I've added <a href="/mute-ante/i/doodles">another new page</a> for me to put drawings, which i make a bunch of. However, it doesn't have much there currently. Hopefully it will in the future.</p>
+        <p>I've added <a href="/website/doodles">another new page</a> for me to put drawings, which i make a bunch of. However, it doesn't have much there currently. Hopefully it will in the future.</p>
         <h2>→ 12/9/2022 09:20</h2>
-        <p>There is now <a href="/mute-ante/i/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
+        <p>There is now <a href="/website/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
         <h2>→ 11/9/2022 18:15</h2>
         <p>Some "new" blender <a href="/website/blenders/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
         <h2>→ 11/9/2022 18:46</h2>
@@ -71,7 +71,7 @@
         <h2>→ 14/8/2022 13:59</h2>
         <p>Ok so, i made all links bold from the css files, but that meant having to remove almost ALL the bold tags from all the pages... That took 50 minutes?? jeez...</p>
         <h2>→ 14/8/2022 13:09</h2>
-        <p>I added <a href="/website/blenders/pyramids" class="pyramid">some more blender things</a> with purple/blue and yellow pyramids.</p>
+        <p>I added <a href="/website/blender/pyramids" class="pyramid">some more blender things</a> with purple/blue and yellow pyramids.</p>
         <h2>→ 12/8/2022 19:12</h2>
         <p>Changed the index layout some. I think it's better.</p>
         <h2>→ 12/8/2022 17:42</h2>
