--- a/blender.html
+++ b/blender.html
@@ -11,10 +11,7 @@
         .pyramid{
             background-color: #000429; 
             color:#ddba39}
-        .pyramid:hover{
-            background-color: #ddba39; 
-            color:#000429;
-            text-decoration-color: #ddba39;}
+        .pyramid:hover{text-decoration-color: #ddba39;}
 
     </style></head>
 
