--- a/sitelog.html
+++ b/sitelog.html
@@ -9,10 +9,7 @@
             .pyramid{
                 background-color: #000429; 
                 color:#ddba39}
-            .pyramid:hover{
-                background-color: #ddba39; 
-                color:#000429;
-                text-decoration-color: #ddba39}
+            .pyramid:hover{text-decoration-color: #ddba39}
             #statuscafe{margin-top: 20px; margin-bottom: 20px}
         </style></head>
 
