--- a/sitelog.html
+++ b/sitelog.html
@@ -42,13 +42,13 @@
         <h2>→ 12/9/2022 09:20</h2>
         <p>There is now <a href="/website/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
         <h2>→ 11/9/2022 18:15</h2>
-        <p>Some "new" blender <a href="/website/blenders/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
+        <p>Some "new" blender <a href="/website/blender/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
         <h2>→ 11/9/2022 18:46</h2>
         <p>Created the {basement} section of the website and added, for the very first time, a johnvertisement. Now that i have a section of the website that is solely dedicated to hot having a theme (or having a theme that matches rather well with other themes), things like this are fit for it.</p>
         <h2>→ 11/9/2022 18:15</h2>
         <p>Just added a new section called <a href="/website/i">{i}</a>. Whenever i feel like making something that doesn't fit the vibe of the rest of the website, i'll put it there, whatever it may be. Also, it has it's own changelog, so anything that changes there will be there, not here. Again, whole different vibe.</p>
         <h2>→ 10/9/2022 18:55</h2>
-        <p>I made a couple <a href="/website/blenders/buttons">buttons</a>. <img src="/website/blenders/buttons/walking.gif" alt="walking"></p>
+        <p>I made a couple <a href="/website/blender/buttons">buttons</a>. <img src="/website/blender/buttons/walking.gif" alt="walking"></p>
         <h2>→ 8/9/2022 19:36</h2>
         <p>I moved the navigation thingy to the top of the page so it doesn't mess up much with the centering!</p>
         <h2>→ 7/9/2022 09:33</h2>
