--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
     <div class="all">
     <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
-    <h1 style="text-shadow:#080808 5px 5px">cvni81's website</h1>
+    <h1 style="text-shadow:#080808 5px 5px; line-height: 1.25">cvni81's website</h1>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br>
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
