--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
     (<a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recomment you do!)<br>
     Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
-    (maybe i'll even put them here in my website, maybe), but now also html and css i guess!</p>
-    Favorite passtimes include: 
-    <ul>
+    (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
+    Favorite passtimes include: </p>
+    <ul style="margin: 0px">
         <li>Chatting in Discord;</li>
         <li>Listening to <a href="/website/musicians">music</a>;</li>
         <li>Working on this website;</li>
