--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <h1>about me</h1>
     <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
-    (<a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recomment you do!)<br>
+    (<a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a> is a little (heh) constructed language that has just 137 words! It's super easy to learn, and i highly recommend you do!)<br>
     Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
     (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
     Favorite passtimes include: </p>
