--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <span class="misc"><a href="/website/misc" class="misc">misc</a> other things</span><br>
         <br>
         <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
-        <a href="/website/sitelog">sitelog</a> changes to the site<br>
+        <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
+        <a href="/website/sitelog">sitelog</a> changes to the site
     </div>
     </div>
     </body>
