--- a/misc/folder.html
+++ b/misc/folder.html
@@ -31,6 +31,7 @@
             <li><a href="/website/misc/folder/etc_button.jpg">etc (the culprit)</a></li>
         </ul>
     </details>
+    > <a href="/website/misc/folder/difference">difference</a>: a thing about the importance of difference.<br>
     > <a href="/website/misc/folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.<br>
     > <a href="/website/misc/folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.<br>
     > <a href="/website/misc/folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.<br>
