--- a/misc/folder/difference.html
+++ b/misc/folder/difference.html
@@ -38,6 +38,6 @@
             <br><b><i>→ Everyone is equal and different, but not more or less than anyone else.</i></b>
             <br>
             <br>A bit confusing, but i hope you get it.
-            <br><a href="/website/misc/folder">go back</a>
+            <br><br><a href="/website/misc/folder">go back</a>
         </div>
     </body>
