--- a/misc/folder/difference.html
+++ b/misc/folder/difference.html
@@ -25,7 +25,7 @@
         <div class="main">
 
         <h1>about difference in general</h1>
-        <hr>
+        <p>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
             <br>It'd be boring if everyone'd be the same, if nothing new happened each day, wouldn't it?
             <br>Why question and shun and fight differences instead of embracing and accepting them?
@@ -38,6 +38,6 @@
             <br><b><i>→ Everyone is equal and different, but not more or less than anyone else.</i></b>
             <br>
             <br>A bit confusing, but i hope you get it.
-            <br><br><a href="/website/misc/folder">go back</a>
+            <br><br><a href="/website/misc/folder">go back</a></p>
         </div>
     </body>
