--- a/doodles.html
+++ b/doodles.html
@@ -8,14 +8,16 @@
     <style>
         body{background-image:url(/website/doodles/background.jpg);
             background-repeat:no-repeat;
-            background-size:cover;
-            padding-top:20px;}
-        a, a::after, a::before{color: #353535}
-        .button::after, .button::before{content: ""}
+            background-size:cover;}
+        a{color: #353535}
+        a:hover{color: #080808}
         .c, .m, .y{background-color: #f0f0f0;}
         .c:hover{background-color: #003351;}
         .m:hover{background-color: #640c25;}
         .y:hover{background-color: #806014;}
+        .main{width: 100%}
+        .nav{background-color: #d0d0d0;
+        border-color: #080808}
     </style>
     </head>
 
