--- a/doodles.html
+++ b/doodles.html
@@ -15,8 +15,8 @@
         .c:hover{background-color: #003351;}
         .m:hover{background-color: #640c25;}
         .y:hover{background-color: #806014;}
-        .main{width: 100%}
-        .nav{background-color: #d0d0d0;
+        .main{width: 100%; padding-top: 20px}
+        nav{background-color: #d0d0d0;
         border-color: #080808}
     </style>
     </head>
