--- a/doodles/people.html
+++ b/doodles/people.html
@@ -3,33 +3,51 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>{people}</title>
-        <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <title>people</title>
+        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/mute-ante/i/doodles/background.jpg);
+        body{background-image:url(/website/doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
-            padding-top:20px;
             background-attachment: fixed;}
-        a, a::after, a::before{color: #353535}
+        a{color: #353535}
+        a:hover{color: #080808}
         img{border: solid #080808 3px}
         .header{border: solid 0px}
         #drawings{line-height:0;column-count: 3; column-gap:3px}
         #drawings img{margin-bottom: -3px;}
+        .main{width: 100%; padding-top: 20px}
+        nav{background-color: #d0d0d0;
+        border-color: #080808}
     </style>
     </head>
 
     <body>
-        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{people}" style="height:120px; margin-bottom:20px" class="header">
-        <br><a href="/mute-ante/i/doodles">go back</a><br>
+        <nav><div style="margin: 20px">
+            <a href="/website">home</a><br>
+            <br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
+            <br>
+            <a href="/website/nimi-mute">nimi mute</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
+            <br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
+        </div></nav>
+        <div class="main">
+        <img src="/website/doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
         <div id="drawings" style="width:650px; margin-top:20px">
-        <img src="/mute-ante/i/doodles/people/annoyed.jpg" alt="annoyed" style="width:100%;">
-        <img src="/mute-ante/i/doodles/people/guy.jpg" alt="guy" style="width:100%;">
-        <img src="/mute-ante/i/doodles/people/aslep.jpg" alt="aslep" style="width:100%;">
-        <img src="/mute-ante/i/doodles/people/aww.jpg" alt="aww" style="width:100%;">
-        <img src="/mute-ante/i/doodles/people/faces.jpg" alt="faces" style="width:100%;">
-        <img src="/mute-ante/i/doodles/people/hmm.jpg" alt="hmm" style="width:100%;">
-        <img src="/mute-ante/i/doodles/people/sitting.jpg" alt="sitting" style="width:100%;">
-        <img src="/mute-ante/i/doodles/people/stairs.jpg" alt="stairs" style="width:100%;">
+        <img src="/website/doodles/people/annoyed.jpg" alt="annoyed" style="width:100%;">
+        <img src="/website/doodles/people/guy.jpg" alt="guy" style="width:100%;">
+        <img src="/website/doodles/people/aslep.jpg" alt="aslep" style="width:100%;">
+        <img src="/website/doodles/people/aww.jpg" alt="aww" style="width:100%;">
+        <img src="/website/doodles/people/faces.jpg" alt="faces" style="width:100%;">
+        <img src="/website/doodles/people/hmm.jpg" alt="hmm" style="width:100%;">
+        <img src="/website/doodles/people/sitting.jpg" alt="sitting" style="width:100%;">
+        <img src="/website/doodles/people/stairs.jpg" alt="stairs" style="width:100%;">
         </div>
     </body>
