--- a/buttons.html
+++ b/buttons.html
@@ -8,7 +8,7 @@
     <style>
         body{background-color: #b8cadf;}
         nav{background-color: #7ba0cc; border-color: #475464}
-        a::after, a::before{color: #7ba0cc}
+        a::after, a::before{color: #b8cadf}
         h1{text-shadow: #7ba0cc 3px 3px}
     </style>
     </head>
