--- a/sitelog.html
+++ b/sitelog.html
@@ -14,7 +14,7 @@
             #entry{border-left: solid #808080 3px; padding-left: 8px}
             h2{font-size: large;}
             #entry h2{margin-bottom: 7px}
-            #entry p2{margin-top: 7px}
+            #entry p{margin-top: 7px}
         </style></head>
 
         <body><nav><div style="margin: 20px">
