--- a/sitelog.html
+++ b/sitelog.html
@@ -38,64 +38,64 @@
     <div id="entry">
         <h2>20/9/2022 20:14</h2>
         <p>I have a <a href="https://cvni81.123guestbook.com/">guestbook</a> now! If you've got any feedback to give or any questions, you can say them there.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>17/9/2022 17:10</h2>
         <p>More drawings added to <a href="/website/doodles">doodles</a>, also now put into categories instead of on a list.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>13/9/2022 16:49</h2>
         <p>Added some drawings to <a href="/website/doodles">doodles</a> and added a new <a href="/website/misc">miscellaneous</a> page for things that have no other place that i can put them.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>12/9/2022 16:56</h2>
         <p>I've added <a href="/website/doodles">another new page</a> for me to put drawings, which i make a bunch of. However, it doesn't have much there currently. Hopefully it will in the future.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>12/9/2022 09:20</h2>
         <p>There is now <a href="/website/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>11/9/2022 18:15</h2>
         <p>Some "new" blender <a href="/website/blender/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>11/9/2022 18:46</h2>
         <p>Created the {basement} section of the website and added, for the very first time, a johnvertisement. Now that i have a section of the website that is solely dedicated to hot having a theme (or having a theme that matches rather well with other themes), things like this are fit for it.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>11/9/2022 18:15</h2>
         <p>Just added a new section called <a href="/website/i">{i}</a>. Whenever i feel like making something that doesn't fit the vibe of the rest of the website, i'll put it there, whatever it may be. Also, it has it's own changelog, so anything that changes there will be there, not here. Again, whole different vibe.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>10/9/2022 18:55</h2>
         <p>I made a couple <a href="/website/blender/buttons">buttons</a>. <img src="/website/blender/buttons/walking.gif" alt="walking"></p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>8/9/2022 19:36</h2>
         <p>I moved the navigation thingy to the top of the page so it doesn't mess up much with the centering!</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>7/9/2022 09:33</h2>
         <p>I changed the font in the <a href="/website/nimi-mute">nimi mute</a> section to Atkinson Hyperlegible, because the previous font's legibility sucked. I can even read it without glasses. <i>The power of design.</i></p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>3/9/2022 17:13</h2>
         <p>I now have a <a href="https://status.cafe/users/cvni81" class="cafe">status.cafe</a> thing after it decided not to give me the confirmation email darnit. I tried to put it at the start but it didn't seem to work and here seemed more appropriate.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>1/9/2022 19:45</h2>
         <p>I might have added a bit too much but it's done now!</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>1/9/2022 15:48</h2>
         <p>I just added a little box to help navigating through the site easier. Just a couple more things and i'll be done...</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>31/8/2022 22:06</h2>
         <p>Alright, i'm done remaking the site! Not fully, there's still some things i want to do, but it's already better, i think.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>31/8/2022 20:26</h2>
         <p>It's been a while since i've reinstalled Ubuntu, but i'm back and made another <a href="/website/nimi-mute/sona-pini">little poem</a>! Also i feel like changing the layout again...</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>18/8/2022 06:29</h2>
         <p>I added a <a href="/website/nimi-mute/ona">new toki pona poem thing</a>.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>14/8/2022 13:59</h2>
         <p>Ok so, i made all links bold from the css files, but that meant having to remove almost ALL the bold tags from all the pages... That took 50 minutes?? jeez...</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>14/8/2022 13:09</h2>
         <p>I added <a href="/website/blender/pyramids" class="pyramid">some more blender things</a> with purple/blue and yellow pyramids.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>12/8/2022 19:12</h2>
         <p>Changed the index layout some. I think it's better.</p>
-    <br></div><div id="entry">
+    </div><br><div id="entry">
         <h2>12/8/2022 17:42</h2>
         <p>I just added the <a href="/website/blender">blender images</a> and now <a href="/website/sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
     </div></body>
