--- a/sitelog.html
+++ b/sitelog.html
@@ -11,8 +11,8 @@
                 color:#ddba39}
             .pyramid:hover{text-decoration-color: #ddba39}
             #statuscafe{margin-top: 20px; margin-bottom: 20px}
-            #entry{border-left: solid #808080 3px; padding-left: 8px}
-            h2{font-size: large; margin-bottom: 20px}
+            #entry{border-left: solid #808080 3px; padding-left: 8px; margin-bottom: 20px}
+            h2{font-size: large}
             #entry h2{margin-bottom: 7px}
             #entry p{margin-top: 7px}
         </style></head>
