--- a/sitelog.html
+++ b/sitelog.html
@@ -10,7 +10,7 @@
                 background-color: #000429; 
                 color:#ddba39}
             .pyramid:hover{text-decoration-color: #ddba39}
-            #statuscafe{margin-top: 20px; margin-bottom: 20px}
+            #statuscafe{margin-top: 20px; margin-bottom: 30px}
             #entry{border-left: solid #808080 3px; padding-left: 8px; margin-bottom: 20px}
             h2{font-size: large}
             #entry h2{margin-bottom: 7px}
@@ -34,7 +34,7 @@
         </div></nav>
         <div class="main">
         <h1>sitelog</h1>
-        <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
+        <div id="entry"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
         <h2>20/9/2022 20:14</h2>
         <p>I have a <a href="https://cvni81.123guestbook.com/">guestbook</a> now! If you've got any feedback to give or any questions, you can say them there.</p>
