--- a/sitelog.html
+++ b/sitelog.html
@@ -34,8 +34,9 @@
         </div></nav>
         <div class="main">
         <h1>sitelog</h1>
+        <br>
         <div id="entry"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
-    <div id="entry">
+    <br><div id="entry">
         <h2>20/9/2022 20:14</h2>
         <p>I have a <a href="https://cvni81.123guestbook.com/">guestbook</a> now! If you've got any feedback to give or any questions, you can say them there.</p>
     </div><div id="entry">
