--- a/sitelog.html
+++ b/sitelog.html
@@ -34,7 +34,7 @@
         </div></nav>
         <div class="main">
         <h1>sitelog</h1>
-        <div id="entry" style="margin-top: 50px; margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
+        <div id="entry" style="margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
         <h2>26/9/2022 17:50</h2>
         <p>I wanted to change the layout a tad, and now it's finally done! Yayyyy</p>
