--- a/buttons.html
+++ b/buttons.html
@@ -45,5 +45,7 @@
     <a href="https://status.cafe" class="button"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"/></a>
     <a href="https://noodledesk.net/" class="button"><img src="https://noodledesk.net/index_images/noodlebutton.gif" alt="noodle desk"/></a>
     <a href="https://www.bikobatanari.art/" class="button"><img src="https://www.bikobatanari.art/images/bikobatanari.gif" alt="bikobatanari"/></a>
+    <br><div id="wcb" class="carbonbadge"></div>
+    <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
     <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/website/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </div></body>
