--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <li>Listening to <a href="/website/musicians">music</a>;</li>
         <li>Working on this website;</li>
         <li>Composing stuffs in Beepbox;</li>
-        <li><a href="/website/i/doodles">Doodling things</a>;</li>
+        <li><a href="/website/doodles">Doodling things</a>;</li>
         <li>Seeing new places and taking photos of them.</li></ul>
     <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</p>
