--- a/words.html
+++ b/words.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <title>nimi mute</title>
         <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
+        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
+        summary{font-size: x-large;}
+        </style> 
     </head>
         <body><nav><div style="margin: 20px">
             <a href="/website">home</a><br>
@@ -23,13 +25,13 @@
         </div></nav>
         <div class="main">
         <h1>words</h1>
-        <details><summary>texts in english</summary>
+        <details><summary><a>texts in english</a></summary>
         <ul>
             <li><a href="website/words/let-you-out">let you out</a></li>
             <li><a href="website/words/these-two">these two</a></li>
         </ul>
         </details>
-        <details><summary>texts in toki pona (nimi mute pi toki pona)</summary>
+        <details><summary><a>texts in toki pona (nimi mute pi toki pona)</a></summary>
         <ul>
             <li><a href="/website/words/sona-pini">sona pini (nimi 124)</a></li>
             <li><a href="/website/words/ona">ona (nimi 41)</a></li>
