--- a/words.html
+++ b/words.html
@@ -5,7 +5,7 @@
         <title>nimi mute</title>
         <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
-        summary{font-size: x-large;}
+        summary{font-size: x-large; text-decoration: underline;}
         </style> 
     </head>
         <body><nav><div style="margin: 20px">
@@ -27,8 +27,8 @@
         <h1>words</h1>
         <details><summary><a>texts in english</a></summary>
         <ul>
-            <li><a href="website/words/let-you-out">let you out</a></li>
-            <li><a href="website/words/these-two">these two</a></li>
+            <li><a href="words/let-you-out">let you out</a></li>
+            <li><a href="words/these-two">these two</a></li>
         </ul>
         </details>
         <details><summary><a>texts in toki pona (nimi mute pi toki pona)</a></summary>
