--- a/words.html
+++ b/words.html
@@ -9,7 +9,7 @@
         </style> 
     </head>
         <body><nav><div style="margin: 20px">
-            <a href="">home</a><br>
+            <a href="/website">home</a><br>
             <br>
             <a href="about">about</a><br>
             <a href="musicians">musicians</a><br>
