--- a/doodles.html
+++ b/doodles.html
@@ -4,9 +4,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>{doodles}</title>
-        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="styles/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/website/doodles/background.jpg);
+        body{background-image:url(doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;}
         .c, .m, .y{background-color: #f0f0f0;}
@@ -21,23 +21,23 @@
     <body><nav><div style="margin: 20px">
         <a href="/website">home</a><br>
         <br>
-        <a href="/website/about">about</a><br>
-        <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a><br>
+        <a href="about">about</a><br>
+        <a href="musicians">musicians</a><br>
+        <a href="websites">websites</a><br>
         <br>
-        <a href="/website/nimi-mute">nimi mute</a><br>
-        <a href="/website/blender">blender</a><br>
-        <a href="/website/doodles">doodles</a><br>
-        <a href="/website/misc">misc</a><br>
+        <a href="words">words</a><br>
+        <a href="blender">blender</a><br>
+        <a href="doodles">doodles</a><br>
+        <a href="misc">misc</a><br>
         <br>
-        <a href="/website/buttons">buttons</a><br>
-        <a href="/website/sitelog">sitelog</a><br>
+        <a href="buttons">buttons</a><br>
+        <a href="sitelog">sitelog</a><br>
     </div></nav>
     <div class="main">
-        <img src="/website/doodles/doodles.gif" alt="{doodles}" style="height:120px;">
-        <img src="/website/doodles/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
+        <img src="doodles/doodles.gif" alt="{doodles}" style="height:120px;">
+        <img src="doodles/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <a href="/website/doodles/people" class="button"><img src="/website/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="c"></a>
-        <a href="/website/doodles/ruler_and_compass" class="button"><img src="/website/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px" class="m"></a>
-        <a href="/website/doodles/etc" class="button"><img src="/website/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="y"></a>
+        <a href="doodles/people" class="button"><img src="doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="c"></a>
+        <a href="doodles/ruler_and_compass" class="button"><img src="doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px" class="m"></a>
+        <a href="doodles/etc" class="button"><img src="doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="y"></a>
     </div></body>
