--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <title>cvni81</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .all{display: grid;
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
@@ -32,18 +32,18 @@
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
-        <a href="/website/about">about</a> stuff about me<br>
-        <a href="/website/musicians">musicians</a> good music people<br>
-        <a href="/website/websites">websites</a> cool websites i've collected<br>
+        <a href="about">about</a> stuff about me<br>
+        <a href="musicians">musicians</a> good music people<br>
+        <a href="websites">websites</a> cool websites i've collected<br>
         <br>
-        <a href="/website/nimi-mute">nimi mute</a> texts in toki pona<br>
-        <a href="/website/blender">blender</a> things i've made in blender<br>
-        <span class="i"><a href="/website/doodles" class="i">doodles</a> some drawings i guess</span><br>
-        <span class="misc"><a href="/website/misc" class="misc">misc</a> other things</span><br>
+        <a href="words">words</a> things i've written<br>
+        <a href="blender">blender</a> things i've made in blender<br>
+        <span class="i"><a href="doodles" class="i">doodles</a> some drawings i guess</span><br>
+        <span class="misc"><a href="misc" class="misc">misc</a> other things</span><br>
         <br>
-        <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
+        <span class="i"><a href="buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
-        <a href="/website/sitelog">sitelog</a> changes to the site
+        <a href="sitelog">sitelog</a> changes to the site
     </div>
     </div>
     </body>
