--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -5,28 +5,28 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>blender: cmyk</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><nav><div style="margin: 20px">
         <a href="/website">home</a><br>
         <br>
-        <a href="/website/about">about</a><br>
-        <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a><br>
+        <a href="about">about</a><br>
+        <a href="musicians">musicians</a><br>
+        <a href="websites">websites</a><br>
         <br>
-        <a href="/website/nimi-mute">nimi mute</a><br>
-        <a href="/website/blender">blender</a><br>
-        <a href="/website/doodles">doodles</a><br>
-        <a href="/website/misc">misc</a><br>
+        <a href="words">words</a><br>
+        <a href="blender">blender</a><br>
+        <a href="doodles">doodles</a><br>
+        <a href="misc">misc</a><br>
         <br>
-        <a href="/website/buttons">buttons</a><br>
-        <a href="/website/sitelog">sitelog</a><br>
+        <a href="buttons">buttons</a><br>
+        <a href="sitelog">sitelog</a><br>
     </div></nav>
     <div class="main">
         <h1>cmyk</h1>
-        <img src="/website/blender/cmyk/cmyk.png" alt="cmyk" width="500px">
-        <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3" width="500px">
-        <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4" width="500px">
-        <img src="/website/blender/cmyk/cmyk7.png" alt="cmyk7" width="500px">
-        <img src="/website/blender/cmyk/cmyk8.png" alt="cmyk8" width="500px">
+        <img src="blender/cmyk/cmyk.png" alt="cmyk" width="500px">
+        <img src="blender/cmyk/cmyk3.png" alt="cmyk3" width="500px">
+        <img src="blender/cmyk/cmyk4.png" alt="cmyk4" width="500px">
+        <img src="blender/cmyk/cmyk7.png" alt="cmyk7" width="500px">
+        <img src="blender/cmyk/cmyk8.png" alt="cmyk8" width="500px">
     </div></body>
