--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -4,9 +4,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>{etc}</title>
-        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="styles/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/website/doodles/background.jpg);
+        body{background-image:url(doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
             background-attachment: fixed;}
@@ -24,29 +24,29 @@
         <nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="/website/about">about</a><br>
-            <a href="/website/musicians">musicians</a><br>
-            <a href="/website/websites">websites</a><br>
+            <a href="about">about</a><br>
+            <a href="musicians">musicians</a><br>
+            <a href="websites">websites</a><br>
             <br>
-            <a href="/website/nimi-mute">nimi mute</a><br>
-            <a href="/website/blender">blender</a><br>
-            <a href="/website/doodles">doodles</a><br>
-            <a href="/website/misc">misc</a><br>
+            <a href="words">words</a><br>
+            <a href="blender">blender</a><br>
+            <a href="doodles">doodles</a><br>
+            <a href="misc">misc</a><br>
             <br>
-            <a href="/website/buttons">buttons</a><br>
-            <a href="/website/sitelog">sitelog</a><br>
+            <a href="buttons">buttons</a><br>
+            <a href="sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
-        <img src="/website/doodles/etcheader.gif" alt="etc" style="height:120px; margin-bottom:20px" class="header"><br>
+        <img src="doodles/etcheader.gif" alt="etc" style="height:120px; margin-bottom:20px" class="header"><br>
         <div id="drawings" style="width:650px; margin-top:20px">
-        <img src="/website/doodles/etc/cat_doodles.jpg" alt="cat doodles" style="width:100%;">
-        <img src="/website/doodles/etc/cat_spotlight.jpg" alt="cat spotlight" style="width:100%;">
-        <img src="/website/doodles/etc/et.jpg" alt="et" style="width:100%;">
-        <img src="/website/doodles/etc/graphite.jpg" alt="graphite" style="width:100%;">
-        <img src="/website/doodles/etc/hypercube.jpg" alt="hypercube" style="width:100%;">
-        <img src="/website/doodles/etc/mobius.jpg" alt="mobius" style="width:100%;">
-        <img src="/website/doodles/etc/waveform.jpg" alt="waveform" style="width:100%;">
-        <img src="/website/doodles/etc/new.jpg" alt="new" style="width:100%;">
-        <img src="/website/doodles/etc/new2.jpg" alt="new2" style="width:100%;">
+        <img src="doodles/etc/cat_doodles.jpg" alt="cat doodles" style="width:100%;">
+        <img src="doodles/etc/cat_spotlight.jpg" alt="cat spotlight" style="width:100%;">
+        <img src="doodles/etc/et.jpg" alt="et" style="width:100%;">
+        <img src="doodles/etc/graphite.jpg" alt="graphite" style="width:100%;">
+        <img src="doodles/etc/hypercube.jpg" alt="hypercube" style="width:100%;">
+        <img src="doodles/etc/mobius.jpg" alt="mobius" style="width:100%;">
+        <img src="doodles/etc/waveform.jpg" alt="waveform" style="width:100%;">
+        <img src="doodles/etc/new.jpg" alt="new" style="width:100%;">
+        <img src="doodles/etc/new2.jpg" alt="new2" style="width:100%;">
         </div>
     </body>
