--- a/doodles/people.html
+++ b/doodles/people.html
@@ -4,9 +4,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>people</title>
-        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="styles/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/website/doodles/background.jpg);
+        body{background-image:url(doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
             background-attachment: fixed;}
@@ -24,28 +24,28 @@
         <nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="/website/about">about</a><br>
-            <a href="/website/musicians">musicians</a><br>
-            <a href="/website/websites">websites</a><br>
+            <a href="about">about</a><br>
+            <a href="musicians">musicians</a><br>
+            <a href="websites">websites</a><br>
             <br>
-            <a href="/website/nimi-mute">nimi mute</a><br>
-            <a href="/website/blender">blender</a><br>
-            <a href="/website/doodles">doodles</a><br>
-            <a href="/website/misc">misc</a><br>
+            <a href="words">words</a><br>
+            <a href="blender">blender</a><br>
+            <a href="doodles">doodles</a><br>
+            <a href="misc">misc</a><br>
             <br>
-            <a href="/website/buttons">buttons</a><br>
-            <a href="/website/sitelog">sitelog</a><br>
+            <a href="buttons">buttons</a><br>
+            <a href="sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
-        <img src="/website/doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
+        <img src="doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
         <div id="drawings" style="width:650px; margin-top:20px">
-        <img src="/website/doodles/people/annoyed.jpg" alt="annoyed" style="width:100%;">
-        <img src="/website/doodles/people/guy.jpg" alt="guy" style="width:100%;">
-        <img src="/website/doodles/people/aslep.jpg" alt="aslep" style="width:100%;">
-        <img src="/website/doodles/people/aww.jpg" alt="aww" style="width:100%;">
-        <img src="/website/doodles/people/faces.jpg" alt="faces" style="width:100%;">
-        <img src="/website/doodles/people/hmm.jpg" alt="hmm" style="width:100%;">
-        <img src="/website/doodles/people/sitting.jpg" alt="sitting" style="width:100%;">
-        <img src="/website/doodles/people/stairs.jpg" alt="stairs" style="width:100%;">
+        <img src="doodles/people/annoyed.jpg" alt="annoyed" style="width:100%;">
+        <img src="doodles/people/guy.jpg" alt="guy" style="width:100%;">
+        <img src="doodles/people/aslep.jpg" alt="aslep" style="width:100%;">
+        <img src="doodles/people/aww.jpg" alt="aww" style="width:100%;">
+        <img src="doodles/people/faces.jpg" alt="faces" style="width:100%;">
+        <img src="doodles/people/hmm.jpg" alt="hmm" style="width:100%;">
+        <img src="doodles/people/sitting.jpg" alt="sitting" style="width:100%;">
+        <img src="doodles/people/stairs.jpg" alt="stairs" style="width:100%;">
         </div>
     </body>
