--- a/websites/geo.html
+++ b/websites/geo.html
@@ -5,22 +5,22 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>websites: geography</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><nav><div style="margin: 20px">
         <a href="/website">home</a><br>
         <br>
-        <a href="/website/about">about</a><br>
-        <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a><br>
+        <a href="about">about</a><br>
+        <a href="musicians">musicians</a><br>
+        <a href="websites">websites</a><br>
         <br>
-        <a href="/website/nimi-mute">nimi mute</a><br>
-        <a href="/website/blender">blender</a><br>
-        <a href="/website/doodles">doodles</a><br>
-        <a href="/website/misc">misc</a><br>
+        <a href="words">words</a><br>
+        <a href="blender">blender</a><br>
+        <a href="doodles">doodles</a><br>
+        <a href="misc">misc</a><br>
         <br>
-        <a href="/website/buttons">buttons</a><br>
-        <a href="/website/sitelog">sitelog</a><br>
+        <a href="buttons">buttons</a><br>
+        <a href="sitelog">sitelog</a><br>
     </div></nav>
     <div class="main">
         <h1>geography and flags</h1>
